# Executer

./: Executer.pptx  README.md
For axf/A5/ahrs/: .cproject  .project  AHRS.c  AHRS.h  main.c
For axf/M0_M4/AHRS/: Target 1.BAT  api.h  main.c  test.uvguix.Jung  test.uvguix.allen  test.uvoptx  test.uvprojx
For axf/M0_M4/AHRS_for_MICRO/: AHRS.c  Target 1.BAT  test.uvguix.Jung  test.uvoptx  test.uvprojx
For axf/M0_M4/Collect_data/: My_sensors.c  Sensors_M0_batch.h  Target 1.BAT  api.h  m0slave.c  my_sct.sct  state_log.txt  test.uvguix.Jung  test.uvoptx  test.uvprojx
For axf/M0_M4/Dhrystone/: Target 1.BAT  main.c  memory_Initial.ini  stepfunc.ini  test.uvguix.Jung  test.uvoptx  test.uvprojx
For axf/M0_M4/keil_proj_clean/: Target 1.BAT  sorting.c  test.c  test.uvguix.Jung  test.uvoptx  test.uvprojx  test_clean_v1.c  test_fir.c
Multi2sim/: multi2sim.txt
perf_sim/: README  README_2  README_3.txt  log  m0_elf  m4_elf  run_m0.sh  run_m0_bak.sh  run_m4.sh  run_semi.sh
perf_sim/470.lbm/config/: cpu-config_C1T1  cpu-config_C2T1  cpu-config_C4T1  cpu-config_core16T1  cpu-config_core1T1  cpu-config_core4T1  cpu-config_core8T1  cpu-config_validate_C1  mem-config_net_C1  mem-config_net_C16_PD0Pd1  mem-config_net_C16_PD1Pd1  mem-config_net_C16_PD1Pd2  mem-config_net_C16_PD1Pd3  mem-config_net_C16_PD2Pd1  mem-config_net_C16_PD2Pd2  mem-config_net_C16_PD2Pd3  mem-config_net_C16_PD4Pd1  mem-config_net_C16_PD4Pd2  mem-config_net_C16_PD4Pd3  mem-config_net_C1_PD0Pd1  mem-config_net_C1_PD1Pd1  mem-config_net_C1_PD4Pd1  mem-config_net_C4  mem-config_net_C4_PD0Pd1  mem-config_net_C4_PD0Pd1_L2PD4Pd1  mem-config_net_C4_PD16Pd1  mem-config_net_C4_PD1Pd1  mem-config_net_C4_PD1Pd2  mem-config_net_C4_PD1Pd3  mem-config_net_C4_PD2Pd1  mem-config_net_C4_PD2Pd2  mem-config_net_C4_PD2Pd3  mem-config_net_C4_PD4Pd1  mem-config_net_C4_PD4Pd2  mem-config_net_C4_PD4Pd3  mem-config_net_C4_PD64Pd1  mem-config_net_C4_backup  mem-config_net_C8_PD0Pd1  mem-config_net_C8_PD1Pd1  mem-config_net_C8_PD1Pd2  (+13 more)
perf_sim/470.lbm/result/: test  test_ref
perf_sim/470.lbm/run_script/: 470.lbm_bandwidth.csv  env.sh  event_trace  link_DRAMSim2  run_gdb.sh  step1_exp_spec2006.sh  step1_spec2006.sh  trace_debug_run.sh  trace_shm_run.sh  trace_validate_run.sh
perf_sim/Multi2Sim_arch/trunk/: Makefile  config.status  configure  configure.ac  libtool  set_env
perf_sim/Multi2Sim_arch/trunk_shm/: CREATE_MAKEFILE  DELETE  Makefile  Makefile.am  README_FIRST  block_mask  configure  search
perf_sim/Multi2Sim_arch/trunk_shm_backup/: Makefile.in  config.status  configure.ac
perf_sim/Multi2Sim_arch/trunk_shm_backup/src/sc_dramsim2/: Makefile  Makefile.am  RUN_gtkwave  dram_ctrl.h
perf_sim/Multi2Sim_arch/trunk_shm_backup/src/sc_dramsim2/.deps/: libscdramsim2_a-dram_ctrl.Po
perf_sim/Multi2Sim_arch/trunk_shm_backup/src/trace_driven/: Makefile  Makefile.am  Makefile.in  back_up.c  trace_driven.cpp  trace_driven.cpp.backup  trace_driven_debug.c
perf_sim/Multi2Sim_arch/trunk_shm_backup/src/trace_driven/include_shm/: Makefile  Makefile.am  Makefile.in  coherence_module.h  globals.h  mcore_module.h
perf_sim/Multi2Sim_arch/trunk_shm_backup/src/trace_driven/include_shm/.deps/: cache_module.Po  cpu_module.Po  memory_module.Po
perf_sim/Multi2Sim_arch/trunk_shm_backup/top/: Main.cpp  Main.h  Makefile  Makefile.am  Makefile.in  m2sSC.h
perf_sim/Multi2Sim_arch/trunk_shm_backup/top/.deps/: __top_builddir__bin_m2s-Top_module.Po
perf_sim/Report/: shm_memory_report  test_ref
perf_sim/Report/traces/: AHRS_A5_1_qemu.din  AHRS_M4_1_qemu.din
perf_sim/app/A5/: DCM_A5.axf  ahrs_A5.axf
perf_sim/executor/: .main.c.bak0.swp  executor  log  main.c  main.c.bak  main.c.bak2  main.c.bak3  main.c.bak4  main.c.bak5  main.c.bak6  main.c.bak7  main.c.bak8  run_AHRS  run_AHRS_200  run_m4.sh  test2  typescript
perf_sim/executor_backup/: Makefile  executor  run_m0.sh
perf_sim/qemu_M0/: Qemu_trace.h  Qemu_trace_in.c  Qemu_trace_out.c  ads7846.d  arm-semi.c  bt-hci-csr.d  bt-hci.d  bt-hid.d  bt-sdp.d  cdrom.d  chk_dep.c.bak0622  chk_dep.c.bak2  config-host.h-timestamp  config-host.mak  cpu-defs.h  cpu-exec.c  cpus.c  eeprom93xx.d  i2c.d  insn_code.h  irq.d  max111x.d  ps2.d  ptimer.d  qdev-properties.d  qdev.d  qemu-doc.texi  qemu-ga.d  qemu-img  qemu-img.1  qemu-io  qemu-nbd.8  read_table.c  read_table.c.bak  scsi-disk.d  scsi-generic.d  smbus.d  ssi.d  tmp105.d  trace_timestamp.c.bak  (+10 more)
perf_sim/qemu_M0_backup/: Changelog  Makefile  armv7a.c.bak  bt-l2cap.d  bt.d  chk_dep.c  chk_dep.c.bak  cpu-exec.c  ds1338.d  event_notifier.d  exec-all.h  exec.c  insn_code.h.v6m  lm832x.d  max7310.d  msmouse.d  qemu-doc.html  qemu-ga  qemu-img.1  qemu-nbd  qemu-nbd.8  qemu-options.texi  qemu.1  read_table.c.v6m  scsi-bus.d  sd.d  smbus_eeprom.d  softmmu_template.h  ssd0303.d  ssd0323.d  ssi-sd.d  stellaris_input.d  trace_timestamp.c  trace_timestamp.h  trace_timestamp.h.bak  transformer-kind.c  transformer-kind.h  usb-bt.d  usb-bus.d  usb-hid.d  (+4 more)
perf_sim/qemu_M4/: Makefile.target  ads7846.d  bt-hci-csr.d  bt-hci.d  bt-hid.d  bt-l2cap.d  bt-sdp.d  bt.d  cdrom.d  config-all-devices.mak  config-host.mak  config.h  ds1338.d  eeprom93xx.d  event_notifier.d  i2c.d  initsig.h  irq.d  lm832x.d  max111x.d  max7310.d  monitor.c  msmouse.d  ps2.d  ptimer.d  qdev-properties.d  qdev.d  qemu-ga  qemu-img  qemu-io  qemu-nbd  qemu-options.def  qemu-tech.html  qemu.1  regval.c  scsi-bus.d  scsi-disk.d  scsi-generic.d  sd.d  sema4_mod.h  (+24 more)
(+1618 files in other folders)
