lib_LIBRARIES = libshm.a
libshm_a_SOURCES = \
	Inc.h \
	cache_module.h \
	cache_module.cpp \
	cpu_module.h \
	cpu_module.cpp \
	mcore_module.h \
	mcore_module.cpp \
	memory_module.h \
	memory_module.cpp \
	coherence_module.cpp \
	coherence_module.h \
	cache.h \
	globals.h 

INCLUDES = @M2S_INCLUDES@
